2018-12-24  Stefan Br\"uns  <stefan.bruens@rwth-aachen.de>

	* pdfimage.cpp: Avoid modification of internal poppler object,
	fix compilation with poppler 0.70.0 and newer ones.
	Improve the change on 2018-10-22.

2018-11-17  Joseph Wright  <joseph.wright@morningstar2.co.uk>

	* xetex.web, xetex.defines: Support some primitives from
	pdfTeX in XeTeX. Add \expanded and extend \Uchar a bit.

2018-10-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfimage.cpp: Support poppler 0.70.0.

2018-09-09  Karl Berry  <karl@tug.org>

	* xetex-bug73.test: LC_ALL=LANGUAGE=C.

2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_pic.c: Allow non-ascii image names (W32 only).

2018-03-24  Hironobu Yamashita <h.y.acetaminophen@gmail.com>
            Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* xetex.ch: Recover the right \lastnodetype initialization
	value ignored by tex.ch.

2018-02-26  Jonathan Kew <jfkthame@gmail.com>

	* xetex.web: Fix the code to skip discretionaries when looking
	for a |native_word|.

2018-02-04  Jonathan Kew <jfkthame@gmail.com>

	* NEWS: Update for 0.99999.

2018-02-03  Jonathan Kew <jfkthame@gmail.com>

	* Bump version number to 0.99999, aiming for the TL'18 release.
	Fix issues reported on https://sourceforge.net/p/xetex/bugs
	* xetex.web, xetex.ch: Patch from Hironori Kitagawa to
	integrate prim_eqtb into eqtb. Fixes issue where
	\primitive\vrule\q incorrectly swallows the \q instead of
	giving an error. Fixes #143.
	* xetex.web: Patch from Hironobu Yamashita for \strcmp and
	\mdfivesum errors. Fixes #144.
	* xetex.web: Patch from Hironobu Yamashita for \uchyph with
	native fonts. Fixes #145.
	* XeTeX_ext.[ch]: Patch from Hironobu Yamashita to properly
	close input pipes. Fixes 147.
	* xetex.web: Leave text as UTF-16 in trick_buf for better
	error context printing. (Mostly) fixes #146.
	It's still possible that error context could include half of
	a supplementary-plane character (i.e. an unpaired surrogate).